APPLICATION=db_MySQLi Class

V0.1.3:

05-Jan-2014 - Updated documentation and added missing README to release as 0.1.3

            - Added method "GetPConnect()" to retrieve persistant connection flag.

V0.1.2:

28-Sep-2014 - Removed all remaining references to MYSQL inside the documentation.

V0.1.1:

01-Sep-2014 - Renamed "EnableCompatibleMode()" to "SetCompatMode()" and added
              missing defines for MYSQL_ASSOC, MYSQL_BOTH and MYSQL_NUM

24-Aug-2014 - Added all examples from MySQL() class, also added new tests.

            - Added new methods():
              * Set_CharSet()
              * Get_CharSet()
              * EnableCompatibleMode()
							* DescTable()
							* GetErrorHandling()
							* AffectedRows()
							* NumRows()
							* PerformNewInsert()
							* SetPConnect()

            - Changed constructor method, now it is defined as __construct(),
              also changed all class variables and constants.

            - During PHP's decision to drop the mysql extension in favour of
              the mysqli class, it was necessary to complete this class as
              a replacement for my old mysql class. This in turn requires
              renaming of all defines to match the old class. Also code
              from old class ported to this class to make it usable as if
              it was the old class.

V0.1.0:

16-Dec-2008 - Added new methods:
              * QueryResult()
              * FreeResult()

15-Dec-2008 - Added new methods:
              * ConvertMySQLDate()
              * LastInsertId()
              * EscapeString()
              * set_TimeNames()
              * get_TimeNames()

24-Aug-2008 - Added new methods:
              * AffectedRows()
              * GetErrNo()
              * GetErrorText()

16-Mar-2008 - Added new methods:
              * Query()
              * Commit()
              * RollBack()
              * SetAutoCommit()
              * GetAutoCommit()
