@@ -1,4 +1,4 @@
-Copyright (c) 2008, Sascha 'SieGeL' Pfalz <php@saschapfalz.de>
+Copyright (c) 2015, Sascha 'SieGeL' Pfalz <php@saschapfalz.de>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
